[tool.poetry]
name = "zerotk.url2env"
version = "1.3.7"
description = "Command line tool to split database urls into multiple environment variables."
authors = ["Alexandre Andrade <kaniabi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zerotk/url2env"
repository = "https://github.com/zerotk/url2env"
documentation = "https://github.com/zerotk/url2env"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [
  { include = "url2env", from = "src" },
]

[tool.poetry.scripts]
url2env = "url2env:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
